# Al-Marjaa-Core

./: .gitignore  Cargo.toml  README.md
.github/workflows/: benchmarks.yml  ci.yml  create-library.yml  main.yml
benches/: interpreter_benchmark.rs  lexer_benchmark.rs  parser_benchmark.rs
docs/: API_REFERENCE.md  INTEGRATION.md
examples/: advanced_data_pipeline.mrj  complete_test.mrj  enums.mrj  fibonacci.mrj  test_jit_fib.mrj  test_jit_func.mrj  test_jit_loop.mrj  test_jit_minimal.mrj  test_jit_simple.mrj  test_jit_vars.mrj
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_arabic.rs  fuzz_interpreter.rs  fuzz_jit.rs  fuzz_lexer.rs  fuzz_parser.rs  fuzz_unicode.rs
src/: lib.rs
src/bytecode/: advanced_jit.rs  aot_compiler.rs  async_jit.rs  benchmarks.rs  compiler.rs  complete_jit.rs  complete_v2_jit.rs  ffi.rs  gc.rs  gc_jit_integration.rs  jit.rs  jit_benchmarks.rs  jit_optimizer.rs  jit_simd.rs  mod.rs  opcodes.rs  optimizer.rs  pgo.rs  register_vm.rs  safety.rs  simd.rs  type_inference.rs  vm.rs  wasm_target.rs
src/cli/: args.rs  commands.rs  mod.rs  repl.rs
src/core/: mod.rs
src/cranelift/: compiler.rs  jit.rs  mod.rs  types.rs
src/error/: advanced_error.rs  mod.rs  reporter.rs
src/interpreter/: mod.rs  native_io.rs  native_stdlib.rs  value.rs
src/lexer/: mod.rs  tokens.rs
src/libs/: mod.rs
src/linter/: mod.rs
src/modules/: mod.rs  module_loader.rs  module_system.rs  package_manager.rs
src/modules/stdlib/: arrays.mrj  crypto.mrj  datetime.mrj  file.mrj  http.mrj  json.mrj  list.mrj  math.mrj  network.mrj  regex.mrj  string.mrj  strings.mrj
src/parser/: ast.rs  mod.rs
src/runtime/: mod.rs
src/stdlib/: mod.rs
src/stdlib/crypto/: asymmetric.rs  hash.rs  jwt.rs  mod.rs  password.rs  random.rs  symmetric.rs
src/stdlib/database/: errors.rs  mod.rs  sqlite.rs
src/stdlib/regex/: mod.rs
src/stdlib/testing/: assertions.rs  mod.rs  reporter.rs  runner.rs
test_files/: test_01_basics.mrj  test_02_arithmetic.mrj  test_03_conditions.mrj  test_04_loops.mrj  test_05_functions.mrj  test_06_lists.mrj  test_07_dictionaries.mrj  test_08_strings.mrj  test_09_objects.mrj  test_10_error_handling.mrj  test_11_algorithms.mrj
tests/: arabic_fuzz_generator.rs  bytecode_tests.rs  comprehensive_interpreter_tests.rs  comprehensive_lexer_tests.rs  core_libraries_integration.rs  e2e_crypto_tests.rs  e2e_module_tests.rs  e2e_real_examples.rs  e2e_real_world.rs  e2e_sqlite_tests.rs  e2e_tests.rs  extended_arabic_errors.rs  integration_tests.rs  interpreter_tests.rs  jit_safety_systems.rs  jit_stability_comprehensive.rs  jit_stress_tests.rs  jit_tests.rs  lexer_tests.rs  module_loader_tests.rs  parser_tests.rs  property_tests.rs  stdlib_tests.rs
tests/corpus/: 11_advanced_tests.mrj  12_jit_tests.mrj
tests/regression/: arabic_errors.rs  extended_arabic_errors.rs
vscode-extension/: .eslintrc.json  .gitignore  .vscodeignore  CHANGELOG.md  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
vscode-extension/snippets/: snippets.json
vscode-extension/src/: debugAdapter.ts  extension.ts  fileAccessor.ts  server.ts
vscode-extension/src/test/: runTest.ts
vscode-extension/src/test/suite/: extension.test.ts  index.ts
vscode-extension/syntaxes/: marjaa.tmLanguage.json
