[package]
name = "almarjaa"
version = "3.4.0"
edition = "2021"
authors = ["رضوان دالي حمدوني <almarjaa.project@hotmail.com>"]
description = "لغة المرجع - النسخة الأساسية - لغة برمجة عربية مع JIT Compiler"
license = "All Rights Reserved"
repository = "https://github.com/radhwendalyhamdouni/Al-Marjaa-Core"
readme = "README.md"
keywords = ["arabic", "programming-language", "compiler", "jit", "bytecode", "cranelift"]
categories = ["compilers", "text-processing", "internationalization"]

[[bin]]
name = "almarjaa"
path = "src/main.rs"

[dependencies]
# ═══════════════════════════════════════════════════════════════════════════════
# الأساسيات
# ═══════════════════════════════════════════════════════════════════════════════
rustyline = "14.0"
unicode-segmentation = "1.11"
colored = "2.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
semver = "1.0"
rand = "0.8"

# ═══════════════════════════════════════════════════════════════════════════════
# JIT Compiler - Cranelift Backend
# ═══════════════════════════════════════════════════════════════════════════════
cranelift = { version = "0.116", optional = true }
cranelift-module = { version = "0.116", optional = true }
cranelift-native = { version = "0.116", optional = true }
cranelift-codegen = { version = "0.116", optional = true }
cranelift-frontend = { version = "0.116", optional = true }
cranelift-jit = { version = "0.116", optional = true }
target-lexicon = { version = "0.13", optional = true }

# ═══════════════════════════════════════════════════════════════════════════════
# الحوسبة المتوازية
# ═══════════════════════════════════════════════════════════════════════════════
rayon = "1.10"
num_cpus = "1.16"

# ═══════════════════════════════════════════════════════════════════════════════
# أدوات إضافية
# ═══════════════════════════════════════════════════════════════════════════════
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
dirs = "5.0"
base64 = "0.22"
hex = "0.4"
uuid = { version = "1.0", features = ["v4"] }
crc32fast = "1.3"

# ═══════════════════════════════════════════════════════════════════════════════
# التشفير والأمان (أساسي)
# ═══════════════════════════════════════════════════════════════════════════════
md5 = "0.7"
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
rsa = { version = "0.9", features = ["sha2", "pem"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
pkcs8 = "0.10"
pkcs1 = "0.7"
bcrypt = "0.15"
argon2 = "0.5"
pbkdf2 = { version = "0.12", features = ["simple"] }
scrypt = "0.11"
password-hash = "0.5"

# ═══════════════════════════════════════════════════════════════════════════════
# سطر الأوامر
# ═══════════════════════════════════════════════════════════════════════════════
clap = { version = "4.5", features = ["derive"] }

# ═══════════════════════════════════════════════════════════════════════════════
# الشبكة (للتحديثات التلقائية)
# ═══════════════════════════════════════════════════════════════════════════════
reqwest = { version = "0.11", features = ["blocking", "json"], optional = true }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "net", "sync", "time", "io-util"], optional = true }

# ═══════════════════════════════════════════════════════════════════════════════
# FFI والتسجيل
# ═══════════════════════════════════════════════════════════════════════════════
libc = "0.2"
shellexpand = "3.1"
tracing = "0.1"

[features]
default = ["network", "cranelift-backend"]
cranelift-backend = ["cranelift", "cranelift-module", "cranelift-native", "cranelift-codegen", "cranelift-frontend", "cranelift-jit", "target-lexicon"]
network = ["reqwest", "tokio"]

[dev-dependencies]
pretty_assertions = "1.4"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
