[package]
name = "almarjaa"
version = "3.4.1"
edition = "2021"
authors = ["رضوان دالي حمدوني <almarjaa.project@hotmail.com>"]
description = "لغة المرجع - النسخة الأساسية - لغة برمجة عربية مع JIT Compiler"
license = "All Rights Reserved"
repository = "https://github.com/radhwendalyhamdouni/Al-Marjaa-Core"
readme = "README.md"
keywords = ["arabic", "programming-language", "compiler", "jit", "bytecode", "cranelift"]
categories = ["compilers", "text-processing", "internationalization"]

[[bin]]
name = "almarjaa"
path = "src/main.rs"

# ═══════════════════════════════════════════════════════════════════════════════
# التبعيات (جميعها مطلوبة للstdlib الكاملة)
# ═══════════════════════════════════════════════════════════════════════════════
[dependencies]
# أساسيات
rustyline = "14.0"
unicode-segmentation = "1.11"
colored = "2.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
semver = "1.0"
rand = "0.8"

# الحوسبة المتوازية
rayon = "1.10"
num_cpus = "1.16"

# أدوات إضافية
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
dirs = "5.0"
base64 = "0.22"
hex = "0.4"
uuid = { version = "1.0", features = ["v4"] }
crc32fast = "1.3"

# سطر الأوامر
clap = { version = "4.5", features = ["derive"] }

# FFI والتسجيل
libc = "0.2"
shellexpand = "3.1"
tracing = "0.1"

# قواعد البيانات
rusqlite = { version = "0.31", features = ["bundled"] }

# الشبكة
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "net", "sync", "time", "io-util"] }

# التشفير
md5 = "0.7"
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
rsa = { version = "0.9", features = ["sha2", "pem"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
pkcs8 = "0.10"
pkcs1 = "0.7"
bcrypt = "0.15"
argon2 = "0.5"
pbkdf2 = { version = "0.12", features = ["simple"] }
scrypt = "0.11"
password-hash = "0.5"

# JIT Compiler - Cranelift Backend (اختياري)
cranelift = { version = "0.116", optional = true }
cranelift-module = { version = "0.116", optional = true }
cranelift-native = { version = "0.116", optional = true }
cranelift-codegen = { version = "0.116", optional = true }
cranelift-frontend = { version = "0.116", optional = true }
cranelift-jit = { version = "0.116", optional = true }
target-lexicon = { version = "0.13", optional = true }

# ═══════════════════════════════════════════════════════════════════════════════
# Feature Flags
# ═══════════════════════════════════════════════════════════════════════════════
[features]
# الافتراضي: Core + Cranelift JIT
default = ["cranelift-backend"]

# Cranelift JIT Backend
cranelift-backend = [
    "cranelift", "cranelift-module", "cranelift-native", 
    "cranelift-codegen", "cranelift-frontend", "cranelift-jit", "target-lexicon"
]

# اختبارات الأداء الثقيلة
bench-heavy = []

# ═══════════════════════════════════════════════════════════════════════════════
# Development Dependencies
# ═══════════════════════════════════════════════════════════════════════════════
[dev-dependencies]
pretty_assertions = "1.4"
criterion = "0.5"
serial_test = "3.0"
tempfile = "3.10"
proptest = "1.5"

# ═══════════════════════════════════════════════════════════════════════════════
# إعدادات الاختبارات
# ═══════════════════════════════════════════════════════════════════════════════
[[test]]
name = "lexer_tests"
path = "tests/lexer_tests.rs"

[[test]]
name = "parser_tests"
path = "tests/parser_tests.rs"

[[test]]
name = "interpreter_tests"
path = "tests/interpreter_tests.rs"

[[test]]
name = "bytecode_tests"
path = "tests/bytecode_tests.rs"

[[test]]
name = "jit_tests"
path = "tests/jit_tests.rs"

[[test]]
name = "jit_stress_tests"
path = "tests/jit_stress_tests.rs"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"

[[test]]
name = "stdlib_tests"
path = "tests/stdlib_tests.rs"

[[test]]
name = "comprehensive_lexer_tests"
path = "tests/comprehensive_lexer_tests.rs"

[[test]]
name = "comprehensive_interpreter_tests"
path = "tests/comprehensive_interpreter_tests.rs"

[[test]]
name = "property_tests"
path = "tests/property_tests.rs"

[[test]]
name = "extended_arabic_errors"
path = "tests/extended_arabic_errors.rs"

[[test]]
name = "jit_safety_systems"
path = "tests/jit_safety_systems.rs"

[[test]]
name = "e2e_real_world"
path = "tests/e2e_real_world.rs"

[[test]]
name = "arabic_fuzz_generator"
path = "tests/arabic_fuzz_generator.rs"

[[test]]
name = "jit_stability_comprehensive"
path = "tests/jit_stability_comprehensive.rs"

[[test]]
name = "e2e_sqlite_tests"
path = "tests/e2e_sqlite_tests.rs"

[[test]]
name = "e2e_crypto_tests"
path = "tests/e2e_crypto_tests.rs"

[[test]]
name = "e2e_module_tests"
path = "tests/e2e_module_tests.rs"

# ═══════════════════════════════════════════════════════════════════════════════
# المعايير (Benchmarks)
# ═══════════════════════════════════════════════════════════════════════════════
[[bench]]
name = "lexer_benchmark"
harness = false

[[bench]]
name = "parser_benchmark"
harness = false

[[bench]]
name = "interpreter_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true

[profile.test]
opt-level = 1
