[package]
name = "almarjaa"
version = "3.4.2"
edition = "2021"
authors = ["رضوان دالي حمدوني <almarjaa.project@hotmail.com>"]
description = "لغة المرجع - النسخة الأساسية - لغة برمجة عربية مع JIT Compiler"
license = "All Rights Reserved"
repository = "https://github.com/radhwendalyhamdouni/Al-Marjaa-Core"
readme = "README.md"
keywords = ["arabic", "programming-language", "compiler", "jit", "bytecode", "cranelift"]
categories = ["compilers", "text-processing", "internationalization"]

[[bin]]
name = "almarjaa"
path = "src/main.rs"

# ═══════════════════════════════════════════════════════════════════════════════
# التبعيات الأساسية (مطلوبة دائماً)
# ═══════════════════════════════════════════════════════════════════════════════
[dependencies]
# أساسيات
rustyline = "14.0"
unicode-segmentation = "1.11"
colored = "2.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
semver = "1.0"
rand = "0.8"

# الحوسبة المتوازية
rayon = "1.10"
num_cpus = "1.16"

# أدوات إضافية
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
dirs = "5.0"
uuid = { version = "1.0", features = ["v4"] }
crc32fast = "1.3"

# سطر الأوامر
clap = { version = "4.5", features = ["derive"] }

# FFI والتسجيل
libc = "0.2"
shellexpand = "3.1"
tracing = "0.1"

# ═══════════════════════════════════════════════════════════════════════════════
# التبعيات الاختيارية (تحتاج feature flags)
# ═══════════════════════════════════════════════════════════════════════════════

# قواعد البيانات (اختياري)
rusqlite = { version = "0.31", features = ["bundled"], optional = true }

# الشبكة (اختياري)
reqwest = { version = "0.11", features = ["blocking", "json"], optional = true }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "net", "sync", "time", "io-util"], optional = true }

# التشفير (اختياري)
md5 = { version = "0.7", optional = true }
sha1 = { version = "0.10", optional = true }
sha2 = { version = "0.10", optional = true }
hmac = { version = "0.12", optional = true }
aes-gcm = { version = "0.10", optional = true }
rsa = { version = "0.9", features = ["sha2", "pem"], optional = true }
ed25519-dalek = { version = "2.1", features = ["rand_core"], optional = true }
pkcs8 = { version = "0.10", optional = true }
pkcs1 = { version = "0.7", optional = true }
bcrypt = { version = "0.15", optional = true }
argon2 = { version = "0.5", optional = true }
pbkdf2 = { version = "0.12", features = ["simple"], optional = true }
scrypt = { version = "0.11", optional = true }
password-hash = { version = "0.5", optional = true }
base64 = { version = "0.22", optional = true }
hex = { version = "0.4", optional = true }

# JIT Compiler - Cranelift Backend (اختياري)
cranelift = { version = "0.116", optional = true }
cranelift-module = { version = "0.116", optional = true }
cranelift-native = { version = "0.116", optional = true }
cranelift-codegen = { version = "0.116", optional = true }
cranelift-frontend = { version = "0.116", optional = true }
cranelift-jit = { version = "0.116", optional = true }
target-lexicon = { version = "0.13", optional = true }

# ═══════════════════════════════════════════════════════════════════════════════
# مكتبات Al-Marjaa الخارجية (اختياري)
# ═══════════════════════════════════════════════════════════════════════════════

# مكتبة الذكاء الاصطناعي
almarjaa-ai = { path = "../al-marjaa-libraries/libs/ai", optional = true }

# مكتبة قواعد البيانات
almarjaa-database = { path = "../al-marjaa-libraries/libs/database", optional = true }

# مكتبة الشبكات
almarjaa-network = { path = "../al-marjaa-libraries/libs/network", optional = true }

# مكتبة ONNX
almarjaa-onnx = { path = "../al-marjaa-libraries/libs/onnx", optional = true }

# مكتبة GPU
almarjaa-gpu = { path = "../al-marjaa-libraries/libs/gpu", optional = true }

# مكتبة الأتمتة الصناعية
almarjaa-industrial = { path = "../al-marjaa-libraries/libs/industrial", optional = true }

# ═══════════════════════════════════════════════════════════════════════════════
# Feature Flags
# ═══════════════════════════════════════════════════════════════════════════════
[features]
# الافتراضي: Core فقط (خفيف)
default = []

# Core مع JIT
cranelift-backend = [
    "cranelift", "cranelift-module", "cranelift-native", 
    "cranelift-codegen", "cranelift-frontend", "cranelift-jit", "target-lexicon"
]

# دعم قواعد البيانات
database = ["rusqlite", "tokio"]

# دعم الشبكات
network = ["reqwest", "tokio"]

# دعم التشفير
crypto = [
    "md5", "sha1", "sha2", "hmac", "aes-gcm", "rsa", "ed25519-dalek",
    "pkcs8", "pkcs1", "bcrypt", "argon2", "pbkdf2", "scrypt", "password-hash",
    "base64", "hex"
]

# المكتبة القياسية الكاملة
full-stdlib = ["database", "network", "crypto"]

# ═══════════════════════════════════════════════════════════════════════════════
# مكتبات Al-Marjaa الخارجية
# ═══════════════════════════════════════════════════════════════════════════════

# مكتبة الذكاء الاصطناعي
ai = ["almarjaa-ai"]

# مكتبة قواعد البيانات المتقدمة
database-advanced = ["almarjaa-database"]

# مكتبة الشبكات المتقدمة
network-advanced = ["almarjaa-network"]

# مكتبة ONNX
onnx = ["almarjaa-onnx"]

# مكتبة GPU
gpu = ["almarjaa-gpu"]

# مكتبة الأتمتة الصناعية
industrial = ["almarjaa-industrial"]

# جميع المكتبات الخارجية
all-libs = ["ai", "database-advanced", "network-advanced", "onnx", "gpu", "industrial"]

# كل شيء (Core + جميع المكتبات)
full = ["full-stdlib", "cranelift-backend", "all-libs"]

# اختبارات الأداء الثقيلة
bench-heavy = []

# ═══════════════════════════════════════════════════════════════════════════════
# Development Dependencies
# ═══════════════════════════════════════════════════════════════════════════════
[dev-dependencies]
pretty_assertions = "1.4"
criterion = "0.5"
serial_test = "3.0"
tempfile = "3.10"
proptest = "1.5"

# ═══════════════════════════════════════════════════════════════════════════════
# إعدادات الاختبارات
# ═══════════════════════════════════════════════════════════════════════════════
[[test]]
name = "lexer_tests"
path = "tests/lexer_tests.rs"

[[test]]
name = "parser_tests"
path = "tests/parser_tests.rs"

[[test]]
name = "interpreter_tests"
path = "tests/interpreter_tests.rs"

[[test]]
name = "bytecode_tests"
path = "tests/bytecode_tests.rs"

[[test]]
name = "jit_tests"
path = "tests/jit_tests.rs"

[[test]]
name = "jit_stress_tests"
path = "tests/jit_stress_tests.rs"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"

[[test]]
name = "stdlib_tests"
path = "tests/stdlib_tests.rs"

[[test]]
name = "comprehensive_lexer_tests"
path = "tests/comprehensive_lexer_tests.rs"

[[test]]
name = "comprehensive_interpreter_tests"
path = "tests/comprehensive_interpreter_tests.rs"

[[test]]
name = "property_tests"
path = "tests/property_tests.rs"

[[test]]
name = "extended_arabic_errors"
path = "tests/extended_arabic_errors.rs"

[[test]]
name = "jit_safety_systems"
path = "tests/jit_safety_systems.rs"

[[test]]
name = "e2e_real_world"
path = "tests/e2e_real_world.rs"

[[test]]
name = "arabic_fuzz_generator"
path = "tests/arabic_fuzz_generator.rs"

[[test]]
name = "jit_stability_comprehensive"
path = "tests/jit_stability_comprehensive.rs"

[[test]]
name = "core_libraries_integration"
path = "tests/core_libraries_integration.rs"

# ═══════════════════════════════════════════════════════════════════════════════
# المعايير (Benchmarks)
# ═══════════════════════════════════════════════════════════════════════════════
[[bench]]
name = "lexer_benchmark"
harness = false

[[bench]]
name = "parser_benchmark"
harness = false

[[bench]]
name = "interpreter_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true

[profile.test]
opt-level = 1
